# cnbiros_shared_navigation

./: .gitignore  CMakeLists.txt  package.xml
cfg/: CostMapSector.cfg  DynamicGoals.cfg  LaserScanGrid.cfg  PointGrid.cfg  PointSector.cfg  ProximitySector.cfg  SharedActions.cfg  SharedDynamics.cfg
cfg/old/: CostMapSector.cfg  LaserScanSector.cfg  PointSector.cfg
include/cnbiros_shared_navigation/: CostMapToProximitySector.hpp  CostMapToSectorGrid.hpp  DynamicGoals.hpp  LaserScanToProximityGrid.hpp  PointToProximityGrid.hpp  PointToProximitySector.hpp  ProximityGrid.hpp  ProximityGridConverter.hpp  ProximityGridVisualizer.hpp  ProximitySector.hpp  ProximitySectorConverter.hpp  SharedActions.hpp  SharedDynamics.hpp  SharedDynamics.hpp.bkp
include/cnbiros_shared_navigation/old/: CostMapToProximitySector.hpp  LaserScanToProximitySector.hpp  OLD_SharedActions.hpp  PointToProximitySector.hpp  ProximitySectorConverter.hpp  SharedDynamics.hpp.bkp.1
include/cnbiros_wheelchair_navigation/: CostMapToPolarGrid.hpp  CostMapToSectorGrid.hpp  DynamicGoals.hpp
launch/: costmap_to_polargrid.launch  costmap_to_proximitysector.launch  costmap_to_sectorgrid.launch  dynamic_goals.launch  point_to_proximitysector.launch  ros_wheelchair_amcl.launch  ros_wheelchair_map_server.launch  ros_wheelchair_movebase.launch  ros_wheelchair_navigation.launch  shared_actions.launch
launch/old/: point_to_proximitysector.launch  shared_actions.launch
matlab/: angular_influence_distance.m  angular_influence_occupancy.m  dynamical_system_angular_velocity.m  forcelet_angular_repellor.m  get_robot_size.m  get_sector.m  user_goal_distance.m  velocity_normalization.m
matlab/old/: dynamic_repellors_large.m  dynamic_velocity_analysis.m  dynamic_velocity_linear.m  user_goal_distance.m
matlab/schoner/: dynamic_acceleration.m  dynamic_angular_repellor_analysis.m  dynamic_linear_repellor_analysis.m  forcelet_angular_attractor.m  forcelet_angular_repellor.m  forcelet_angular_repellor_range_angle.m  forcelet_angular_repellor_range_space.m  forcelet_angular_repellor_subtended_angle.m  forcelet_linear_attractor_forward.m  forcelet_linear_minposition.m  forcelet_linear_repellor.m  forcelet_linear_spatial_decay.m
msg/: PolarGrid.msg  ProximityGridMsg.msg  ProximitySector.msg
old/: CMakeLists.txt  package.xml
params/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  default_proximitysector_params.yaml  default_sharedactions_params.yaml  dynamic_goals_params.yaml  planner_local_params.yaml  sectorgrid_params.yaml
src/: CostMapToPolarGrid.cpp  CostMapToProximitySector.cpp  CostMapToSectorGrid.cpp  DynamicGoals.cpp  LaserScanToProximityGrid.cpp  PointToProximityGrid.cpp  PointToProximitySector.cpp  ProximityGrid.cpp  ProximityGridConverter.cpp  ProximityGridVisualizer.cpp  ProximitySector.cpp  ProximitySectorConverter.cpp  SharedActions.cpp  SharedDynamics.cpp  costmap_to_polargrid.cpp  costmap_to_proximitysector.cpp  costmap_to_sectorgrid.cpp  dynamic_goals.cpp  keyboard_attractor.cpp  keyboard_goal.cpp  laserscan_to_proximitygrid.cpp  point_to_proximitygrid.cpp  proximitygrid_visualizer.cpp  shared_actions.cpp  shared_dynamics.cpp  simple_navigation_goal.cpp  user_goal.cpp
src/old/: CostMapToProximitySector.cpp  LaserScanToProximitySector.cpp  OLD_SharedActions.cpp  PointToProximitySector.cpp  ProximitySectorConverter.cpp  SharedActions.cpp  SharedDynamics.cpp.bkp.2  keyboard_attractor.cpp  laserscan_to_proximitysector.cpp  point_to_proximitysector.cpp
srv/: ObstacleDecay.srv  ObstacleStrength.srv  SectorMaxAngle.srv  SectorMinAngle.srv  SectorNumber.srv  SectorThreshold.srv
