<?xml version="1.0"?>
<package>
  <name>cnbiros_wheelchair_navigation</name>
  <version>0.1.0</version>
  <description>CNBIROS Wheelchair Navigation library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>costmap_2d</build_depend>
  <run_depend>costmap_2d</run_depend>

  <build_depend>grid_map_ros</build_depend>
  <run_depend>grid_map_ros</run_depend>
  
  <run_depend>map_server</run_depend>
  <run_depend>eband_local_planner</run_depend>
</package>
