<?xml version="1.0"?>
<package format="2">
  <name>cnbiros_shared_navigation</name>
  <version>0.9.0</version>
  <description>CNBIROS Shared Navigation package</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <build_depend>move_base_msgs</build_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>costmap_2d</build_depend>
  <exec_depend>costmap_2d</exec_depend>

  <build_depend>grid_map_ros</build_depend>
  <exec_depend>grid_map_ros</exec_depend>

</package>
